--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
       });
     </script>
   </div>
-  <!--<img class="hero-animate globe" src="assets/img/globe.svg"/>  -->
+  <img class="hero-animate globe" src="assets/img/globe.svg"/>  
 </body>
 
 </html>
